--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: my_counter_app
-description: A new Flutter project.
+description: A Riverpod demo app.
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.14.0
-  hooks_riverpod: ^0.11.1
+  flutter_hooks: ^0.16.0
+  hooks_riverpod: ^0.14.0
 
 dev_dependencies:
   flutter_test:
